Bug 62775 - Kernel 3.8.4 fails to build in i915
Summary: Kernel 3.8.4 fails to build in i915
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-26 18:08 UTC by Lauri Kasanen
Modified: 2017-07-24 22:58 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Lauri Kasanen 2013-03-26 18:08:08 UTC
ERROR: "__build_bug_on_failed" [drivers/gpu/drm/i915/i915.ko] undefined!

I'm hitting this issue: http://www.gossamer-threads.com/lists/linux/kernel/1631803

Seems it was reported before 3.7 final, but the build failure is still in 3.8.4. Changing it to use BUILD_BUG_ON_NOT_POWER_OF_2() as akpm says makes it build.
Comment 1 Daniel Vetter 2013-03-27 10:18:36 UTC
This is gcc being dense, the code is actually correct and builds on most gcc's. Since you're hitting this issue, care to submit the patch to intel-gfx@lists.freedesktop.org?
Comment 2 Lauri Kasanen 2013-03-27 13:05:28 UTC
Sent. I'm not subscribed, so probably will go to the mod queue.
Comment 3 Daniel Vetter 2013-03-27 14:03:44 UTC
Patch applied, thanks:

commit 27b7c63a7c509d797c151e95a641e1d94d94bbd9
Author: Lauri Kasanen <cand@gmx.com>
Date:   Wed Mar 27 15:04:55 2013 +0200

    drm/i915: Fix build failure
    
    ERROR: "__build_bug_on_failed" [drivers/gpu/drm/i915/i915.ko] undefined!
    
    Originally reported at http://www.gossamer-threads.com/lists/linux/kernel/1631803
    FDO bug #62775
    
    This needs to be backported to both 3.7 and 3.8 stable trees. Doesn't apply straight,
    but it's a quick change.
    
    Signed-off-by: Lauri Kasanen <cand@gmx.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=62775
    Cc: stable@vger.kernel.org
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.